--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
         <div class="encuestas">
             <div class="Pregunta">
-                <h2 class="pregunta3"><p class="Pregunta1">¿Como te sentis con la atencion de posse?</h2>
+                <h2 class="pregunta3"><p class="Pregunta1">¿Como te sentis con el soporte de federico?</h2>
             </div>
            <div class="numerosContainer">
             <div class="Caja">1</div>
